swagger documentation added 127.0.0.1:8000/api/documentation
