# app/Http/Controllers/StateController.php
@@ -68,8 +68,14 @@ class StateController extends BaseController
     /**
      * Get List of Local Governments in a State
      * @OA\Get (
-     *     path="/api/states/{state_id}/lgas",
-     *     tags={"States"},
+     *     path="/api/local-governments/{state_id}",
+     *     tags={"Local Governments"},
+     *     @OA\Parameter(
+     *         description="Parameter with mutliple examples",
+     *         in="path",
+     *         name="state_id",
+     *         required=true
+     *     ),
      *     @OA\Parameter(
      *         name="sort_field",
      *         in="query",
@@ -120,10 +126,59 @@ class StateController extends BaseController
     }
 
     /**
-     * @param Request $request
-     * @param StateService $service
-     * @param string $lga_id
-     * @return \Illuminate\Http\JsonResponse
+     * Get List of Wards in a Local Government
+     * @OA\Get (
+     *     path="/api/wards/{local_government_id}",
+     *     tags={"Wards"},
+     *     @OA\Parameter(
+     *         description="Parameter with mutliple examples",
+     *         in="path",
+     *         name="local_government_id",
+     *         required=true
+     *     ),
+     *     @OA\Parameter(
+     *         name="sort_field",
+     *         in="query",
+     *         description="A list of things.",
+     *         required=false,
+     *         example="id"
+     *     ),
+     *     @OA\Parameter(
+     *         name="sort_type",
+     *         in="query",
+     *         description="A list of things.",
+     *         required=false,
+     *         example="asc"
+     *     ),
+     *     @OA\Parameter(
+     *         name="limit",
+     *         in="query",
+     *         description="number of states to return per page",
+     *         required=false,
+     *         example="-1"
+     *     ),
+     *     @OA\Parameter(
+     *         name="search",
+     *         in="query",
+     *         description="Search term (state name)",
+     *         required=false,
+     *         example="lagos"
+     *     ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="success",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="success", type="boolean", example=true)
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="invalid",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="success", type="boolean", example="false"),
+     *          )
+     *      )
+     * )
      */
     public function wards(Request $request, StateService $service, string $lga_id): \Illuminate\Http\JsonResponse
     {
